// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<App>
  <t
    title="Users"
  />
</App>
`;

exports[`renders errors when present 1`] = `
<App
  loading={true}
>
  <t
    title="Users"
  />
</App>
`;
